# oclink

./: .autoenv.zsh  .color_coded  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  _clang-format
clink/: CMakeLists.txt
clink/clink.xcodeproj/: project.pbxproj
clink/clink.xcodeproj/xcuserdata/morgan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
clink/clink.xcodeproj/xcuserdata/morgan.xcuserdatad/xcschemes/: clink.xcscheme  clink_a.xcscheme  xcschememanagement.plist
clink/include/: all.h  clink.h  clink_fan.h  clink_led.h  clink_proto.h  clink_temp.h  corsair_link.h
clink/src/: CMakeLists.txt  clink_fan.c  clink_led.c  clink_temp.c  config.h.in  corsair_link.c  fan.c  fan.h  led.c  led.h  link.c  link.h  proto.h  temp.c  temp.h
clink/test/: CMakeLists.txt  ocl_tests.c
cmake/: CodeCoverage.cmake  FindCheck.cmake  FindHIDAPI.cmake  GenerateCoverageFlags.cmake  JMLColors.cmake  JMLDebug.cmake  JMLMessage.cmake  LLVMCoverage.cmake
darwin/: CMakeLists.txt  clink_darwin.c  clink_darwin.h  clink_darwin_cfg.h.in  hid_utils.c  hid_utils.h  pthread_barrier.c  pthread_barrier.h  util.h
darwin/test/: CMakeLists.txt  darwin_tests.h  hid_utils_tests.c  main.c  util_tests.c
debug/: CMakeLists.txt  _clang-format  color_printf.c  color_printf.h  jml_debug.h
doc/: CMakeLists.txt  Doxyfile.in
oclink/: CMakeLists.txt  main.c  opt.c  opt.h
oclink.xcodeproj/: project.pbxproj
oclink.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
oclink.xcodeproj/xcuserdata/morgan.xcuserdatad/xcschemes/: oclink.xcscheme  xcschememanagement.plist
script/: jml_find_compile_commands.py  leak-check  linux_deps.bash  test-runner  test_subunit.py
src/: CMakeLists.txt  clink.h  config.h.in  fan.c  fan.h  jml_debug.h  led.c  led.h  link.c  link.h  main.c  opt.h  proto.h  temp.c  temp.h  util.c  util.h
test/: CMakeLists.txt  fan_tests.c  led_tests.c  main.c  ocl_tests.c  ocl_tests.h  temp_tests.c  util_tests.c
tui/: CMakeLists.txt  config.h.in  main.c
